--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "native-base": "^2.8.0",
     "react": "16.5.0",
     "react-native": "0.57.0",
+    "react-native-navigation": "^1.1.486",
     "react-native-pdf": "^5.0.4",
     "react-navigation": "^2.14.2",
     "rn-fetch-blob": "^0.10.13"
